# TextGenAdvTrack

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml
data/: README.md
data/detection/: rewrite_val.csv  train.csv  val.csv
data/evasion/: candidates.csv  selected.csv
data/manifests/: codex_batch_append_workflow.md  codex_generation_playbook.md  completed_detection_inventory.csv  current_dataset_summary.md  dataset_catalog.csv  missing_training_data.md  official_data_inventory.csv  rewrite_strategy_registry.csv
data/templates/: ai_original_batch_template.csv  ai_original_template.csv  ai_rewritten_batch_template.csv  (+3 more)
datasets/: README.md  catalog.csv
docs/: execution_plan.md  high_score_4090_runbook.md  project_understanding.md
reports/: detection_classic_plus_report.md  evasion_baseline_report.md
scripts/: backtranslate_evasion.py  build_evasion_test2.py  generate_evasion_test1.py  generate_evasion_test2.py  llm_evasion_generate.py  run_detection_enhanced.sh  run_detection_one_click.sh  run_detection_test2.sh  run_detection_test2_highscore.sh  run_evasion_backtranslate.sh  run_evasion_llm.sh  run_evasion_one_click.sh  run_evasion_test2.sh  run_final_submission.sh  run_full_one_click.sh  split_machine_texts.py
tests/: test_append_batches.py  test_bootstrap_training_data.py  test_config.py  test_data_preparation.py  test_dataset_completion.py  test_detection_data_prep.py  test_evasion_selection.py  test_external_data.py  test_high_score_pipeline.py  test_public_data.py  test_schemas.py  test_training_source_generation.py
(+77 files in other folders)
