[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "textgenadvtrack"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "accelerate>=1.1.0",
  "datasets>=2.19.0",
  "gdown>=5.2.0",
  "joblib>=1.5.0",
  "openpyxl>=3.1.0",
  "pandas>=2.2.0",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.1",
  "pytest>=8.2.0",
  "scikit-learn>=1.4.0",
  "torch>=2.3.0",
  "transformers>=4.41.0",
]

[project.scripts]
textgenadvtrack = "textgenadvtrack.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
